Addressed PR comments